# cpp_snippet

./: CMakeLists.txt  README.md  make.sh
src/: CGI.cpp  CGI.h  CMakeLists.txt  Function.h  RandomGenerator.h  ReverseGuard.h  Singleton.h  Sort.h  TypeTransform.h  example.cpp  nocopyable.h  tree.h
src/eastl/: type_compound.h  type_traits.h
src/test/: CGITest.cpp  CMakeLists.txt  EaStlTest.cpp  FunctionTest.cpp  GTestColorPrint.h  GTestMain.cpp  GTestMockTest.cpp  GTestReverseGuardTest.cpp  GTestSampleClassTest.cpp  GTestSampleCombineTest.cpp  GTestSampleFixtureReuseTest.cpp  GTestSampleFixtureTest.cpp  GTestSampleFunctionTest.cpp  GTestSampleHelperFunctionAndClass.cpp  GTestSampleHelperFunctionAndClass.h  GTestSampleInterfaceTest.cpp  GTestSampleListenerLeakCheckerTest.cpp  GTestSampleListenerOutputTest.cpp  GTestSampleTypeParameterizedTest.cpp  GTestScopedTraceTest.cpp  GTestTypeParameterizedTest.cpp  GTestValueParameterizedTest.cpp  RandomGeneratorTest.cpp  SingletonTest.cpp  Singleton_test.cpp  SortTest.cpp  StdAlgorithmTest.cpp  StdMinMaxTest.cpp  SwapTest.cpp  TemplateTest.cpp  TreeTest.cpp  TypeTransformTest.cpp
